--- a/.github/workflows/docstrings_and_tests.yml
+++ b/.github/workflows/docstrings_and_tests.yml
@@ -2,10 +2,13 @@ name: Check Docstrings and Run Tests
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - feature/workflow
   pull_request:
-    branches: [ master ]
-
+    branches:
+      - master
+      - feature/workflow
 jobs:
   build:
   
