--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -1,4 +1,4 @@
-name: Check Docstrings and Run Tests
+name: Run PyTests
 
 on:
   push:
@@ -25,11 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov pydocstyle darglint
-    
-    - name: Check docstrings (Numpy style)
-      run: |
-        pydocstyle --convention=numpy source
+        pip install pytest pytest-cov
     
     - name: Run tests
       run: |
