--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -13,20 +13,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v2
+
+    - name: Set up Python and Conda Environment
+      uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: '3.x'
-    
-    - name: Install dependencies
+        activate-environment: megaconst_env
+        environment-file: megaconst_env.yml
+        python-version: 3.8
+        auto-activate-base: false
+
+    - name: Check environment
+      shell: bash -l {0}
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-cov
-    
+        conda info
+        conda list
+
     - name: Run tests
+      shell: bash -l {0}
       run: |
         pytest source/tests --cov=source
