--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Check environment
       shell: bash -l {0}
       run: |
+        conda update conda
         conda info
         conda list
 
