workflow branch typo

--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -3,11 +3,11 @@ name: Run PyTests
 on:
   push:
     branches:
-      - master
+      - main
       - feature/workflow
   pull_request:
     branches:
-      - master
+      - main
       - feature/workflow
 
 jobs:
